# dit_ml

./: README.md  project.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dit_ml/: dit.py  rope.py
tests/: test_dit.py  test_rope.py
