[tool.poetry]
name = "dit-packaged"
version = "0.1.0"
description = "DiT packaged (Diffusion Transoformer)"
authors = ["Adrien Bufort <adrien.bufort@orange.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
