[project]
name = "dit-packaged"
version = "0.1.0"
description = "DiT (Diffusion Transformer)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "timm>=1.0.15",
    "torch>=2.7.0",
]

[tool.setuptools]
packages = ["dit_packaged"]

[tool.setuptools.packages.find]
where = ["."] # Assuming the package directory 'dit_packaged' is at the root level
